--- a/src/components/AnswerButton/AnswerButton.module.css
+++ b/src/components/AnswerButton/AnswerButton.module.css
@@ -14,6 +14,9 @@
 
   cursor: pointer;
   transition: all 0.1s ease-in-out;
+
+  overflow-wrap: break-word;
+  min-width: 0;
 }
 
 .button:hover {
